--- a/register.html
+++ b/register.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Administrador</title>
-
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-
     <!--JS & jQuery-->
     <script type="text/javascript" src="js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -20,29 +18,26 @@
             <img src="img/login.png" alt="imagem-login">
             <h1 align="center">Cadastro de Administrador do Site!<br>Boa sorte!</h1>
         </div>
-
         <div class="box-login">
             <h1>Cadastro de Usuário</h1>
-
             <div class="box">
                 <h2>Crie seu login</h2>
                 <input type="text" name="admin_codigo" id="admin_codigo" placeholder="Código de Administrador" required>
                 <input type="password" name="admin_senha" id="admin_senha" placeholder="Senha do Administrador" required>
-
                 <!-- Botão de cadastro -->
                 <button type="button" id="registerButton" class="mb-2 btn btn-primary">Cadastrar</button>
-
                 <a href="admin_login.html">
                     <p>Já tem uma conta? Faça login!</p>
                 </a>
             </div>
         </div>
     </div>
-
     <script>
         document.getElementById('registerButton').addEventListener('click', async function() {
-            var admin_codigo = document.getElementById('admin_codigo').value;
-            var admin_senha = document.getElementById('admin_senha').value;
+            const admin_codigo = document.getElementById('admin_codigo').value;
+            const admin_senha = document.getElementById('admin_senha').value;
+
+            console.log('Dados a serem enviados:', { admin_codigo, admin_senha });
 
             if (admin_codigo === "" || admin_senha === "") {
                 alert("Por favor, preencha todos os campos.");
@@ -50,7 +45,6 @@
             }
 
             try {
-                console.log('Enviando dados:', { admin_codigo, admin_senha });
                 const response = await fetch('https://logtes-99v1.onrender.com/register', {
                     method: 'POST',
                     headers: {
@@ -59,20 +53,19 @@
                     body: JSON.stringify({ admin_codigo, admin_senha })
                 });
 
-                console.log('Response Status:', response.status);
-                console.log('Response:', response);
+                console.log('Resposta do servidor:', response);
 
                 if (response.ok) {
                     alert("Administrador cadastrado com sucesso!");
                     window.location.href = 'admin_login.html';
                 } else {
                     const errorData = await response.json();
-                    console.log('Erro no registro:', errorData);
+                    console.error('Erro do servidor:', errorData);
                     alert(`Erro: ${errorData}`);
                 }
             } catch (error) {
-                console.error('Erro:', error);
-                alert("Ocorreu um erro ao tentar cadastrar o administrador. Por favor, tente novamente.");
+                console.error('Erro ao se comunicar com o servidor:', error);
+                alert("Erro ao tentar cadastrar o administrador. Por favor, tente novamente.");
             }
         });
     </script>
