--- a/register.html
+++ b/register.html
@@ -22,8 +22,8 @@
             <h1>Cadastro de Usuário</h1>
             <div class="box">
                 <h2>Crie seu login</h2>
-                <input type="text" name="admin_codigo" id="admin_codigo" placeholder="Código de Administrador" required>
-                <input type="password" name="admin_senha" id="admin_senha" placeholder="Senha do Administrador" required>
+                <input type="text" name="username" id="username" placeholder="Nome de usuário" required>
+                <input type="password" name="password" id="password" placeholder="Senha do Administrador" required>
                 <!-- Botão de cadastro -->
                 <button type="button" id="registerButton" class="mb-2 btn btn-primary">Cadastrar</button>
                 <a href="admin_login.html">
@@ -34,38 +34,38 @@
     </div>
     <script>
         document.getElementById('registerButton').addEventListener('click', async function() {
-            const admin_codigo = document.getElementById('admin_codigo').value;
-            const admin_senha = document.getElementById('admin_senha').value;
+            var username = document.getElementById('username').value;
+            var password = document.getElementById('password').value;
 
-            console.log('Dados a serem enviados:', { admin_codigo, admin_senha });
-
-            if (admin_codigo === "" || admin_senha === "") {
+            if (username === "" || password === "") {
                 alert("Por favor, preencha todos os campos.");
                 return;
             }
 
             try {
+                console.log('Enviando dados:', { username, password });
                 const response = await fetch('https://logtes-99v1.onrender.com/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ admin_codigo, admin_senha })
+                    body: JSON.stringify({ username, password })
                 });
 
-                console.log('Resposta do servidor:', response);
+                console.log('Response Status:', response.status);
+                console.log('Response:', response);
 
                 if (response.ok) {
                     alert("Administrador cadastrado com sucesso!");
                     window.location.href = 'admin_login.html';
                 } else {
                     const errorData = await response.json();
-                    console.error('Erro do servidor:', errorData);
+                    console.log('Erro no registro:', errorData);
                     alert(`Erro: ${errorData}`);
                 }
             } catch (error) {
-                console.error('Erro ao se comunicar com o servidor:', error);
-                alert("Erro ao tentar cadastrar o administrador. Por favor, tente novamente.");
+                console.error('Erro:', error);
+                alert("Ocorreu um erro ao tentar cadastrar o administrador. Por favor, tente novamente.");
             }
         });
     </script>
